gitops/gateway-argocd/base/argocd-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/part-of: streamforge-infra
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
      sectionName: https-listener
  hostnames:
    - "argocd.sudheer.fun"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
          namespace: argocd
