gitops/gateway-argocd/base/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-redirect
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/part-of: streamforge-infra
    app.kubernetes.io/component: gateway
spec:
  parentRefs:
    - name: argocd-gateway
      namespace: argocd
      sectionName: http-listener
  hostnames:
    - "argocd.sudheer.fun"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
